various cleanups, javadocs, logging